--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,25 @@
 <body>   
     <body background="assets/images/trees.png">
 <header>
-    <div class="header">
-        <a class="active" >Keegan Nair</a>
-        <div class="header-right">
-          <a href="index.html">About</a>
-          <a href="#portfolio">Portfolio</a>
-          <a href="contact.html">Contact</a>
-        </div>
-      </div>
+        <div class="header row">
+                <div class="col-xl-6 col-lg-6 col-md-4 col-sm-12">
+                  <a class="active " >Keegan Nair</a> 
+                </div>
+                <div class="col-xl-5 col-lg-6 col-md-8 col-sm-">
+                  <div class="header-right  ">
+                    <ul class="nav justify-content-end">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>   
+                </div>
+                </div>
 </header>
 
 
